Fix compiler warnings, type safety, serialization, and modernize codebase patterns