@@ -25,7 +25,7 @@ import java.util.Vector;
  */
 public class NativeCBlock {
     NativeCClassLoader _customCClassLoader;
-    Class _nativeCWrapperClass;
+    Class<?> _nativeCWrapperClass;
     InterfaceNativeCWrapper _nativeCWrapperObj;
     private double[] _xINVector;
     private double[] _xOUTVector;
@@ -69,7 +69,7 @@ public class NativeCBlock {
         try {
             _customCClassLoader = new NativeCClassLoader();
             _nativeCWrapperClass = _customCClassLoader.findClass("ch.technokrat.gecko.geckocircuits.nativec.NativeCWrapper");
-            _nativeCWrapperObj = (InterfaceNativeCWrapper) _nativeCWrapperClass.newInstance();
+            _nativeCWrapperObj = (InterfaceNativeCWrapper) _nativeCWrapperClass.getDeclaredConstructor().newInstance();
             _nativeCWrapperObj.loadLibrary(name);
             return true;
         } catch (Exception e) {
